# Lumos-Trade

./: .env.example  .replit  .replit.workflow  README.md  app.py  ema_data.json  package-lock.json  package.json  postcss.config.js  pyproject.toml  replit.nix  run_app.py  run_flask.py  run_server.py  server.js  simple_server.py  start-server.sh  start_server.sh  tsconfig.json
attached_assets/: Pasted-DOMException-at-t-value-https-f4c2f436-eede-4cde-8673-5548c72a3b97-00-3nj3awo8n6qis-picard-re-1743187773383.txt
client/: index.html
client/src/: App.tsx
client/src/components/: ActiveOrders.tsx  AutoTradeLogs.tsx  AutoTradingPanel.tsx  ConnectionStatus.tsx  Header.tsx  LoginModal.tsx  OBZoneStats.tsx  PerformanceMetrics.tsx  TradeHistory.tsx  TradingChart.tsx  TradingJournal.tsx  TradingPanel.tsx
client/src/lib/: apiService.ts  chartHelpers.ts  charts.ts  firebase.ts  queryClient.ts  trading.ts  utils.ts  webSocketService.ts
client/src/pages/: Dashboard.tsx
server/: exchange.ts  index.ts  routes.ts  storage.ts  websocket.ts
shared/: schema.ts
