[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "binance>=0.3",
    "ccxt>=4.4.70",
    "flask>=3.1.0",
    "matplotlib>=3.10.1",
    "nap>=2.0.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-binance>=1.0.28",
    "python-dotenv>=1.1.0",
    "schedule>=1.2.2",
    "ta>=0.11.0",
    "websockets>=15.0.1",
]
